[package]
name = "base58check-encode"
description = "base58check string encoding helpers" 
version = "0.1.0"
edition = "2021"
license-file = './license'


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = {version = "0.10.2"}
hex = "0.3.1"